packages/lustre-v6.6.103.3/test/should_fail/polymorphic/ply03.lus

node ply03(x,y: int) returns (o: int^42);
let
	o = if (x < y) then 0^42 else map<<+,42>>(x^42, y^42);
tel
